// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Notification _Example 1`] = `
<div>
  <div
    class="container test-docs"
  >
    <div
      class="row"
    >
      <div
        class="col-12 col-md-6 mb-4 mb-md-0"
      >
        <p
          class="mb-4"
        >
          <strong>
            Notifica standard
          </strong>
        </p>
        <div
          class="notification dismissable"
          style="display: block;"
        >
          <h5>
            Titolo Notifica
          </h5>
          <button
            class="notification-close btn btn-"
            type="button"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Chiudi notifica: 
              Titolo Notifica
            </span>
          </button>
        </div>
      </div>
      <div
        class="col-12 col-md-6"
      >
        <p
          class="mb-4"
        >
          <strong>
            Notifica con icona
          </strong>
        </p>
        <div
          class="notification with-icon dismissable"
          style="display: block;"
        >
          <h5>
            Titolo Notifica
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
              />
            </svg>
          </h5>
          <button
            class="notification-close btn btn-"
            type="button"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Chiudi notifica: 
              Titolo Notifica
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Notification _NotificationWithMessageStatic 1`] = `
<div>
  <div
    class="container test-docs"
  >
    <div
      class="row"
    >
      <div
        class="col-12 col-md-6 mb-4 mb-md-0"
      >
        <p
          class="mb-4"
        >
          <strong>
            Notifica standard
          </strong>
        </p>
        <div
          class="notification dismissable"
          style="display: block;"
        >
          <h5>
            Titolo Notifica
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
          </p>
          <button
            class="notification-close btn btn-"
            type="button"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Chiudi notifica: 
              Titolo Notifica
            </span>
          </button>
        </div>
      </div>
      <div
        class="col-12 col-md-6"
      >
        <p
          class="mb-4"
        >
          <strong>
            Notifica con icona
          </strong>
        </p>
        <div
          class="notification success with-icon dismissable"
          style="display: block;"
        >
          <h5>
            Titolo Notifica
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
              />
            </svg>
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
          </p>
          <button
            class="notification-close btn btn-"
            type="button"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Chiudi notifica: 
              Titolo Notifica
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Notification _RoundingOfCorners 1`] = `
<div>
  <div
    class="container test-docs"
  >
    <div
      class="row mb-5"
    >
      <div
        class="col-12 col-md-6 mb-4 mb-md-0"
      >
        <p>
          <strong>
            Base (4 angoli arrotondati)
          </strong>
        </p>
        <div
          class="notification success with-icon dismissable"
          style="display: block;"
        >
          <h5>
            Titolo Notifica
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
              />
            </svg>
          </h5>
          <button
            class="notification-close btn btn-"
            type="button"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Chiudi notifica: 
              Titolo Notifica
            </span>
          </button>
        </div>
      </div>
      <div
        class="col-12 col-md-6"
      >
        <p>
          <strong>
            top-fix
          </strong>
        </p>
        <div>
          <div
            class="notification success top-fix with-icon dismissable"
            style="display: block;"
          >
            <h5>
              Titolo Notifica
              <svg
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
                />
              </svg>
            </h5>
            <button
              class="notification-close btn btn-"
              type="button"
            >
              <svg
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
                />
              </svg>
              <span
                class="visually-hidden"
              >
                Chiudi notifica: 
                Titolo Notifica
              </span>
            </button>
          </div>
        </div>
        <p
          class="mt-4"
        >
          <strong>
            bottom-fix
          </strong>
        </p>
        <div>
          <div
            class="notification success bottom-fix with-icon dismissable"
            style="display: block;"
          >
            <h5>
              Titolo Notifica
              <svg
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
                />
              </svg>
            </h5>
            <button
              class="notification-close btn btn-"
              type="button"
            >
              <svg
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
                />
              </svg>
              <span
                class="visually-hidden"
              >
                Chiudi notifica: 
                Titolo Notifica
              </span>
            </button>
          </div>
        </div>
        <p
          class="mt-4"
        >
          <strong>
            left-fix
          </strong>
        </p>
        <div>
          <div
            class="notification success left-fix with-icon dismissable"
            style="display: block;"
          >
            <h5>
              Titolo Notifica
              <svg
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
                />
              </svg>
            </h5>
            <button
              class="notification-close btn btn-"
              type="button"
            >
              <svg
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
                />
              </svg>
              <span
                class="visually-hidden"
              >
                Chiudi notifica: 
                Titolo Notifica
              </span>
            </button>
          </div>
        </div>
        <p
          class="mt-4"
        >
          <strong>
            right-fix
          </strong>
        </p>
        <div>
          <div
            class="notification success right-fix with-icon dismissable"
            style="display: block;"
          >
            <h5>
              Titolo Notifica
              <svg
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
                />
              </svg>
            </h5>
            <button
              class="notification-close btn btn-"
              type="button"
            >
              <svg
                class="icon"
                enable-background="new 0 0 24 24"
                role="img"
                viewBox="0 0 24 24"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  icon
                </title>
                <path
                  d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
                />
              </svg>
              <span
                class="visually-hidden"
              >
                Chiudi notifica: 
                Titolo Notifica
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Notification DefaultLocation 1`] = `
<div>
  <div
    class="container test-desktop"
  >
    <div
      class="notification success with-icon dismissable"
      style="display: block;"
    >
      <h5>
        Titolo Notifica
        <svg
          class="icon"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
          />
        </svg>
      </h5>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
      </p>
      <button
        class="notification-close btn btn-"
        type="button"
      >
        <svg
          class="icon"
          enable-background="new 0 0 24 24"
          role="img"
          viewBox="0 0 24 24"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            icon
          </title>
          <path
            d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
          />
        </svg>
        <span
          class="visually-hidden"
        >
          Chiudi notifica: 
          Titolo Notifica
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Notification Dismissable 1`] = `
<div>
  <div
    class="container test-docs"
  >
    <div
      class="row"
    >
      <div
        class="col-12 col-md-6 mb-4 mb-md-0"
      >
        <p
          class="mb-4"
        >
          <strong>
            Notifica standard
          </strong>
        </p>
        <div
          class="notification dismissable"
          style="display: block;"
        >
          <h5>
            Titolo Notifica
          </h5>
          <button
            class="notification-close btn btn-"
            type="button"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Chiudi notifica: 
              Titolo Notifica
            </span>
          </button>
        </div>
      </div>
      <div
        class="col-12 col-md-6"
      >
        <p
          class="mb-4"
        >
          <strong>
            Notifica con icona
          </strong>
        </p>
        <div
          class="notification success with-icon dismissable"
          style="display: block;"
        >
          <h5>
            Titolo Notifica
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
              />
            </svg>
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
          </p>
          <button
            class="notification-close btn btn-"
            type="button"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Chiudi notifica: 
              Titolo Notifica
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Notification EsempioMinimo 1`] = `
<div>
  <div>
    <button
      class="btn btn-outline-"
      type="button"
    >
      Mostra Notifica
    </button>
    <div
      id="esempio-base"
    />
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Notification EsempioMinimoComponente 1`] = `
<div>
  <div>
    <button
      class="btn btn-outline-"
      type="button"
    >
      Mostra Notifica con componente React
    </button>
    <div
      id="esempio-avanzato"
    />
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Notification FixedPositions 1`] = `
<div>
  <div
    class="container test-desktop"
  >
    <div>
      <div
        class="notification success top-fix with-icon dismissable"
        style="display: block;"
      >
        <h5>
          Top Fix
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
            />
          </svg>
        </h5>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
        </p>
        <button
          class="notification-close btn btn-"
          type="button"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
            />
          </svg>
          <span
            class="visually-hidden"
          >
            Chiudi notifica: 
            Top Fix
          </span>
        </button>
      </div>
    </div>
    <div>
      <div
        class="notification success left-fix with-icon dismissable"
        style="display: block;"
      >
        <h5>
          Left Fix
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
            />
          </svg>
        </h5>
        <button
          class="notification-close btn btn-"
          type="button"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
            />
          </svg>
          <span
            class="visually-hidden"
          >
            Chiudi notifica: 
            Left Fix
          </span>
        </button>
      </div>
    </div>
    <div>
      <div
        class="notification success right-fix with-icon dismissable"
        style="display: block;"
      >
        <h5>
          Right Fix
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
            />
          </svg>
        </h5>
        <button
          class="notification-close btn btn-"
          type="button"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
            />
          </svg>
          <span
            class="visually-hidden"
          >
            Chiudi notifica: 
            Right Fix
          </span>
        </button>
      </div>
    </div>
    <div>
      <div
        class="notification success bottom-fix with-icon dismissable"
        style="display: block;"
      >
        <h5>
          Bottom Fix
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
            />
          </svg>
        </h5>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
        </p>
        <button
          class="notification-close btn btn-"
          type="button"
        >
          <svg
            class="icon"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
            />
          </svg>
          <span
            class="visually-hidden"
          >
            Chiudi notifica: 
            Bottom Fix
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Notification NotificationOptionsComponent_Fake 1`] = `<div />`;

exports[`Stories Snapshots Documentazione/Componenti/Notification States 1`] = `
<div>
  <div
    class="container test-docs"
  >
    <div
      class="row mb-5"
    >
      <div
        class="col-12 col-md-6 mb-4 mb-md-0"
      >
        <p>
          <strong>
            Success
          </strong>
        </p>
        <div
          class="notification success with-icon dismissable"
          style="display: block;"
        >
          <h5>
            Titolo Notifica
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m17.1 7.9.7.7-7.8 7.6-4.7-4.6.7-.7 4 3.9 7.1-6.9zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
              />
            </svg>
          </h5>
          <button
            class="notification-close btn btn-"
            type="button"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Chiudi notifica: 
              Titolo Notifica
            </span>
          </button>
        </div>
      </div>
      <div
        class="col-12 col-md-6"
      >
        <p>
          <strong>
            Error
          </strong>
        </p>
        <div
          class="notification error with-icon dismissable"
          style="display: block;"
        >
          <h5>
            Titolo Notifica
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M16.3 8.3 12.6 12l3.7 3.6-.7.7-3.7-3.6-3.6 3.6-.7-.7 3.6-3.6-3.6-3.7.7-.7 3.6 3.7 3.7-3.7.7.7zM22 12c0 5.5-4.5 10-10 10S2 17.5 2 12 6.5 2 12 2s10 4.5 10 10zm-1 0c0-5-4-9-9-9s-9 4-9 9 4 9 9 9 9-4 9-9z"
              />
            </svg>
          </h5>
          <button
            class="notification-close btn btn-"
            type="button"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Chiudi notifica: 
              Titolo Notifica
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="row mb-5"
    >
      <div
        class="col-12 col-md-6 mb-4 mb-md-0"
        style="top: 45px;"
      >
        <p>
          <strong>
            Info
          </strong>
        </p>
        <div
          class="notification info with-icon dismissable"
          style="display: block;"
        >
          <h5>
            Titolo Notifica
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 19c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm-.7-15h1.5v2h-1.5V6zm0 3h1.5v9h-1.5V9z"
              />
            </svg>
          </h5>
          <button
            class="notification-close btn btn-"
            type="button"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Chiudi notifica: 
              Titolo Notifica
            </span>
          </button>
        </div>
      </div>
      <div
        class="col-12 col-md-6"
        style="top: 45px;"
      >
        <p>
          <strong>
            Warning
          </strong>
        </p>
        <div
          class="notification warning with-icon dismissable"
          style="display: block;"
        >
          <h5>
            Titolo Notifica
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="M11.5 14.2V5.7h1.2v8.5h-1.2zm-.1 4.1h1.2v-1.8h-1.2v1.8zM22 7.9v8.3L16.1 22H7.9L2 16.2V7.9L7.9 2h8.2L22 7.9zm-1 .4L15.7 3H8.3L3 8.3v7.5L8.3 21h7.4l5.3-5.2V8.3z"
              />
            </svg>
          </h5>
          <button
            class="notification-close btn btn-"
            type="button"
          >
            <svg
              class="icon"
              enable-background="new 0 0 24 24"
              role="img"
              viewBox="0 0 24 24"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                icon
              </title>
              <path
                d="m12.7 12 3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8-3.7 3.6z"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              Chiudi notifica: 
              Titolo Notifica
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
